# ocean

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ocean/: __init__.py  cli.py  client.py  exceptions.py  models.py  registry.py  utils.py
ocean/providers/: base.py  bedrock.py  gemini.py  openai.py
